# PynPoint

./: .codecov.yml  .coverage.ini  .coveragerc  .coveralls.yml  .gitignore  .project  .pydevproject  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.rst  Bad_pixel_text.py  CONTRIBUTING.rst  HISTORY.rst  Installation_script.py  Inverse_ADI.py  LICENSE  MANIFEST.in  Makefile  PynPoint_config.ini  README.rst  SCIENCE.rst  SNR_calculation.py  analyze_sky_science_data.py  ap.py  ap_many.py  backup_ap_many _ratio.py  cc.py  fits_export.py  flux.py  fp.py  fpf_calculator.py  heatmap_creation.py  pull_request_template.md  pyproject.toml  requirements.txt  setup.py  side_functions.py  sn.py  snr.py  (+13 more)
.github/: CODEOWNERS
.travis/: install.sh
Paper_Notebooks/: CWT test.ipynb  Planet Size Information.ipynb  Preprocessing_Beta_Pic_29.ipynb  Preprocessing_HR8799_25.ipynb  Shift_Beta_Pic_29.ipynb  Shift_HR8799_25.ipynb  SimpleADI_BlueSky.ipynb  Tests_on_distributions.ipynb  test_box.py.lprof
Paper_Scripts/: Inverse_ADI.py  fits_export.py  fpf_calculator.py  heatmap_creation.py  side_functions.py  test_box.py  wavelet_PSF_study_eps_eri.py  wavelet_PSF_study_keck.py
PynPoint/: Basis.py  BasisWrapper.py  DataIO.py  Data_Shirley_L_Band_PynPoint_conv_stck_500_.hdf5.REMOVED.git-id  FitsReading.py  FitsWriting.py  Hdf5Reading  Hdf5Reading.py  Hdf5Writing.py  Image_Wrapper.py  Images.py  Mask.py  PSFSubtraction.py  PSFsubPreparation.py  Plotter.py  Processing.py  PynPlot.py  PynPoint.py  Pypeline.py  Residuals.py  Util.py  (+21 more)
PynPoint.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+463 files in other folders)
